# log-parser

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  app
include/: log_entry.h  log_loader.h
src/: log_entry.c  log_loader.c  main.c
tests/: test_log_entry.c  test_runner.c
